# cookiecutter-electron-vue

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: LICENSE.BSD-3-Clause  LICENSE.MIT  electron-builder.yml  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
{{cookiecutter.project_slug}}/src/main/: index.ts  preload.ts
{{cookiecutter.project_slug}}/src/renderer/: App.vue
{{cookiecutter.project_slug}}/src/renderer/router/: index.ts
{{cookiecutter.project_slug}}/tests/: example.spec.ts
